# Resume-Scoring-and-Matching

./: .gitignore  README.md  app.py  pyproject.toml
static/: style.css
templates/: index.html
